fix z-index in highlight

--- a/styles/scss/base/_typography.scss
+++ b/styles/scss/base/_typography.scss
@@ -32,6 +32,7 @@ h2 {
 .highlight {
     display: inline-block;
     position: relative;
+    z-index: 1;
 
     &::before {
         background-image: linear-gradient(50deg, transparent 10%, $yellow 10%, $yellow 90%, transparent 90%);
